[package]
name = "ssh-autoport"
version = "0.1.0"
edition = "2021"
description = "Auto-discover and port-forward apps running on your active SSH connections, with a rich TUI"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
